--- a/style.css
+++ b/style.css
@@ -5,194 +5,225 @@
     font-family: Poppins, sans-serif;
     color: #000000;
 }
-
 html {
-    font-size: 70%;
     scroll-behavior: smooth;
 }
-
-/* Utility Classes */
-.bg_color {
-    background-color: #f9f9f9;
-}
-
-.svg_size {
-    height: 30px;
-    width: 30px;
-}
-
-.make_col {
-    display: flex;
-    flex-direction: column;
-}
-
-.make_row {
-    display: flex;
-    flex-direction: row;
-}
-
-.mid {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-right: 10px;
-}
-
-/* Body */
 body {
     background-color: #fff;
 }
 
-/* Navigation */
-nav {
-    align-items: center;
-    box-shadow: 0 0 10px rgba(0, 0, 0, .09);
-    display: flex;
-    font-size: 1.7rem;
-    height: auto;
-    justify-content: space-between;
-    padding: 25px 40px 25px 50px;
-    position: fixed;
-    top: 0;
-    width: 100%;
-    z-index: 200;
-    background-color: #fff;
-}
 
-nav h2,
-nav ul,
-nav ul li {
-    background-color: #fff;
-}
-
-nav ul {
-    display: flex;
-    gap: 2rem;
-    list-style: none;
-}
-
-nav ul a {
-    text-decoration: none;
-}
-
-/* Hero Section */
-#hero {
+/* Utility Classes */
+.container{
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    gap: 10rem;
+    background-color:  #f9f9f9;
+    margin: auto;
+}
+
+.root{
+    position: relative;
+    height: calc(100% - 100px);
+    width: 100%;
+}
+/* Navigation */
+nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 10vmin;
+    width: 100%;
+    box-shadow: 0 0 10px rgba(0, 0, 0, .09);
+    font-size: 1.7rem;
+    padding: 25px 40px 25px 40px;
+    position: fixed;
+    top: 0;
+    z-index: 200;
+    background-color: #fff;
+}
+nav h2{
+    font-size: 1.7rem;
+}
+nav ul {
+    display: flex;
+    gap: 2rem;
+    list-style: none;
+
+}
+nav ul li a {
+    text-decoration: none;
+    font-size: 1.2rem;
+    font-weight: 200;
+}
+nav i{
+    display: none;
+    flex-wrap: wrap;
+    font-size: 3vh;
+}
+
+
+/* Hero Section */
+#hero {
+    gap: 5rem;
     height: 100vh;
-    max-width: 100vw;
-    margin-left: auto;
-    margin-right: auto;
+    margin-top: 0%; 
+    flex-wrap: wrap-reverse;
+    position: relative;
+    padding: 20px;
 }
-
-#hero-text {
-    padding: 15px;
-}
-
-#hero_text h1 {
+#hero_text h1{
     color: #2d2e32;
-    font-size: 5.5rem;
+    font-size: 3.5rem;
     line-height: 1.2;
 }
-
-#hero_text h1 img {
-    width: 55px;
-    height: 55px;
+#hero_text h1 img{
+    width: 60px;
+    height: auto;
+    vertical-align: middle;
+    margin-right: -10px;
+    margin-top: -10px;
 }
-
-#hero_text p {
+#hero_text p{
     color: #555;
-    font-size: 1.8rem;
+    font-size: 1.4rem;
     font-weight: 500;
     font-family: Mulish, sans-serif;
-}
 
+}
 #hero_text span {
     cursor: pointer;
     display: flex;
     gap: 1.3rem;
     margin-top: 1rem;
-    margin-bottom: 6rem;
+    margin-bottom: 4rem;
+}
+#hero_text span a img{
+    width: 2rem;
 }
 
-#hero_text span button {
-    padding: 0;
-    border: none;
-    background: none;
+#hero_img img{
+    margin-top: 5rem;
+    max-width: 30vw;
+    border-radius: 40%;
+
+}
+
+.tech_stack img{
     cursor: pointer;
+    margin-right: 5px;
 }
 
-#hero_img img {
-    margin-top: 35px;
-    height: 70vh;
-    width: 30vw;
-    border-radius: 50%;
-}
+@media (max-width: 900px) {
+    
+    nav ul a{
+      display: none;
+    }
+    nav i{
+      display: block;
+    }
+    #hero_img {
+        display: none;
+    }
+    #hero_text span{
+      flex-wrap: wrap;
+      margin-bottom: 1rem;
+    }
+    .tech_stack , #hero_text span{
+        display: flex;
+        flex-wrap: wrap;
+        margin-top: 10px;
+        align-items: center;
+        justify-content: center;
+    }
+    #hero_text p, #hero_text h1{
+        text-align: center;
+    }
+    .tech_stack img{
+        margin-top: 1rem;
+    }
+    #hero_text h1 img{
+        display: none;
+    }
+    
+  
+  }
 
-/* About Section */
+
+ 
+/* Default styles */
 .about_section {
-    margin: auto;
+    padding: 20px;
+    background-color: #fff;
+}
+
+.about_section .container {
     max-width: 70vw;
+    margin-top: 5rem;
+    background-color: #fff;
     display: flex;
     flex-direction: row;
-    margin-top: 10rem;
-    align-items: center;
     justify-content: space-between;
+    align-items: center;
 }
 
-#about_img img {
-    border-radius: 1.7rem;
-    height: 28rem;
-    width: 47rem;
+.about_img img {
+    max-width: 35vw;
+    height: auto;
+    border-radius: 15px;
 }
 
-#about_text {
-    margin-left: 5vw;
+.about_text {
+    max-width: 30vw;
     color: #555;
-    font-size: 1.5rem;
+    font-size: 1rem;
     font-weight: 500;
     font-family: Mulish, sans-serif;
 }
 
-/* Projects Section */
-#projects {
-    margin-top: 10rem;
-    padding: 150px;
-    text-align: center;
-    font-size: 2.5rem;
+@media screen and (max-width: 900px) {
+    .about_section .container {
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-evenly; /* Distribute space evenly */
+    }
+
+    .about_text {
+        max-width: 100%;
+        text-align: left;
+        margin-top: 20px; /* Add margin for better spacing */
+    }
+    .about_img img{
+        max-width: 100%;
+    }
 }
 
-/* Contact Section */
-#contact_section {
-    margin-top: 10rem;
-    max-width: 70vw;
-    font-size: 1.7rem;
-    font-weight: 700;
-    margin-left: 15vw;
-}
-
-#contact_text p {
-    margin-top: 1.6rem;
-    margin-bottom: 2rem;
-}
-
-#mail {
-    margin-left: 40px;
-}
-
-/* Footer */
-#footer {
-    background-color: #2d2e32;
+.project_section .container{
+    padding: 120px;
     margin-top: 5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-size: 1.7rem;
+}
+@media screen and (max-width: 900px) {
+    .project_section .container {
+        padding: 80px; /* Optional: Add horizontal padding for better spacing */
+    }
 }
 
-#footer h3 {
-    color: white;
-    max-width: 70vw;
-    font-size: 1.7rem;
-    font-weight: 700;
-    margin-left: 15vw;
+
+.footer {
+    background-color: #2d2e32;
 }
+
+.footer h3 {
+    color: white;
+    /* max-width: 70vw; */ /* use it when you add form in footer*/
+    font-size: 1.2rem;
+    font-weight: 700;
+    text-align: center;
+}
+
