added footer and fixed typos

--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ body {
     align-items: center;
     justify-content: center;
     background-color:  #f9f9f9;
+    padding: 20px;
     margin: auto;
 }
 
@@ -214,17 +215,126 @@ nav i{
     }
 }
 
-
-.footer {
+.footer_section {
     background-color: #2d2e32;
+    /* padding: 20px; */
+    position: relative;
+}
+.footer_section .container{
+    max-width: 95vw;
+    padding: 20px;
+    background-color: #2d2e32;
+    display: flex;
+    justify-content: space-between;
+}
+.footer_section form{
+    margin-left: 15vmax;
+    width: 30vmax;
+    
+}
+form label ,footer h3{
+    color: #fff;
+}
+#contactForm div label{
+    width: 30%;
+}
+#contactForm div input, textarea{
+    border-radius: 5px;
+    background-color: #f9f9f9;
+    width: 70%;
+}
+#contactForm textarea{
+    height: 100px;
+}
+#contactForm button{
+    width: 98%;
+    margin: 10px;
+    font-size: 1rem;
+    background-color: #147efb;
+    color: #fff;
+    border: 0.5px solid #fff;
+    border-radius: 5px;
+}
+form textarea, form input{
+    padding: 5px;
+}
+.label_inline{
+    display: flex;
+    margin: 10px;
+}
+#social_links_section{
+    position: relative;
+}
+#social_links{
+    margin-top: 40%;
 }
 
-.footer h3 {
+/* Media queries for footer section */
+@media screen and (max-width: 900px) {
+    .footer_section .container {
+        flex-direction: column;
+        align-items: center;
+        background-color: yellow;
+        justify-content: none;
+        position: relative;
+        height: 30vmax;
+    }
+    form{
+        width: 100%;
+    }
+    #form_container {
+        margin-left: 0; /* Reset margin */
+        width: 100%; /* Occupy full width */
+    }
+
+    #social_links_section {
+        margin-top: 1rem; /* Adjust margin */
+    }
+}
+
+/* Additional styles for smaller screens if needed */
+
+
+/* Additional styles for smaller screens if needed */
+
+/* .footer h3 {
     padding: 20px;
     color: white;
-    /* max-width: 70vw; */ /* use it when you add form in footer*/
+    max-width: 70vw; 
     font-size: 1.2rem;
     font-weight: 700;
-    text-align: center;
+    
 }
+.label_inline{
+    display: flex;
+    margin: 10px;
+}
+form label {
+    color: #fff;
+    margin: 10px;
+}
+form input{
+    width: 100%;
+}
+footer form textarea{
+    height: 8vmax;
+    width: 100%;
+}
+
+footer form button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: auto;
+    border-radius: 5px;
+    background-color: #147efb;
+}
+#social_links{
+    line-height: 0.5rem;
+     margin-top: 10vh; 
+}
+/* #social_links span{
+    margin-left: 20px;
+} */ 
 
